# update-server

./: .env  Cargo.toml  README.md
client/: Cargo.toml  complete.json  request.json
client/src/: main.rs
server/: schema.sql  update.json
src/: main.rs
